added resume apis
